<resources>
    <string name="app_name">Assignment3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mian Muhammad Anwar Sahib</string>
    <string name="nav_header_subtitle">bcsf17a505@pucit.edu.pk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="modulus">%</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="seven">7</string> <string name="eight">8</string> <string name="nine">9</string>
    <string name="four">4</string> <string name="five">5</string> <string name="six">6</string>
    <string name="one">1</string> <string name="two">2</string> <string name="three">3</string>
    <string name="exit">X</string> <string name="zero">0</string> <string name="dot">.</string>

</resources>